# morphdG

./: CMakeLists.txt  setup.py
bindings/: .pybind_wrapper.cpp.~undo-tree~  pybind_wrapper (Copy).cpp  pybind_wrapper.cpp
include/morphdg/: .#aggmesh.hpp  .aggmesh.hpp.~undo-tree~  .dgsolver.hpp.~undo-tree~  aggmesh.hpp  dgsolver.hpp
morphdg/: .__init__.py.~undo-tree~  .dg_solver.py.~undo-tree~  .jit.py.~undo-tree~  .mesh.py.~undo-tree~  .plot_mesh.py.~undo-tree~  __init__.py  dg_solver.py  jit.py  mesh.py  plot_mesh.py
morphdg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: .jit_cache_00ebc1e77fbfd40a153c2eed9619bba8.cpp  .jit_cache_0a97acb9efa38b728d02a5a064f412b6.cpp  .jit_cache_30565a8911a6bb487e3745c0ea3c8224.cpp  .jit_cache_62dca49f0781bf26b4305bddb0414bea.cpp  .jit_cache_ae68eb98a5b5e5da6d2d9094f3bf7feb.cpp  .jit_cache_e4c2e8edac362acab7123654b9e73432.cpp  .mesh.dat.~undo-tree~  .mesh.png.~undo-tree~  .test0.py.~undo-tree~  .test1.py.~undo-tree~  .test2.py.~undo-tree~  .test3.py.~undo-tree~  .test4.py.~undo-tree~  test0.py  test1.py  test2.py  test3.py  test4.py
